addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
/* ... */
#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div,
#wsd_checkout_form #price_donate {
    width: 100% !important;
    border: 0;
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div > span {
    border: 0;
    background-color: white;
    border-radius: 0;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div > span.input-group-addon:first-of-type {
    display: none;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div > div > span.input-group-addon:last-of-type {
    order: -1;
    font-size: 14px;
    line-height: 30px;
    min-width: 90px;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div.active {
    background-color: #FDF7F3;
    border: 1px solid #E36F1E !important;
}

#wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > div.active > div > span.input-group-addon:last-of-type,
#wsd_checkout_form .active #price_donate {
    color: #E36F1E;
    background-color: #FDF7F3;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.input-group-lg > .form-control,
.input-group-lg > .input-group-addon,
.input-group-lg > .input-group-btn > .btn {
    height: 70px !important;
}

.input-group-lg > .input-group-addon {
    padding: 20px 10px !important;
}

@media only screen and (max-width: 767px) {
    #wsd_checkout_form > div > div.product_price.mt16 > h4.oe_price_h4.css_editable_mode_hidden.decimal_precision > div > span > input {
        margin-bottom: 0 !important;
        padding-top: 0;
        padding-bottom: 0;
    }
}

/* Suggested price boxes - multi page forms */

/* TODO */

/* Payment interval box */

small.payment_interval_info,
div.js_product h4#payment_intervals hr {
    display: none !important;
}

#payment_intervals > div {
    width: 100%;
}

#payment_intervals > div select,
#payment_intervals > div select.has-success.form-control{
    border-radius: 0;
    border: 1px solid #DEDEDE;
}

#payment_intervals > div select:focus,
#payment_intervals > div select.has-success.form-control:focus {
    -webkit-box-shadow: none;
    box-shadow: none;
}

#payment_intervals > div > span {
    display: none;
}

#wsd_checkout_form > div > div.product_price.mt16 {
    margin-top: 0 !important;
}

/* Form box */

div#wsd_checkout_form_inside_row {
    -webkit-box-shadow: none;
    box-shadow: none;
}

#wsd_checkout_form_inside_row div.row.billing-fields {
    margin-left: -30px !important;
    margin-right: -30px !important;
    width: calc(100% + 64px);
    max-width: calc(100% + 64px);
}

@media only screen and (max-width: 768px) {
    div#wsd_checkout_form_inside_row {
        padding: 0px !important;
    }
}

/* Form groups */


/* Payment methods */

#payment_method > div:nth-child(2) {
    padding: 0;
}

ul.nav.nav-tabs li {
    display: inline-block;
    border: 1px solid #DEDEDE;
    width: 179px;
    height: 151px;
    background-color: white;
    line-height: 151px;
    text-align: center;
    margin-bottom: 0px;
}

ul.nav.nav-tabs li.active {
    border: 1px solid #E36F1E;
}

ul.nav.nav-tabs li.active a {
    background-color: #FDF7F3;
    color: #E36F1E;
}

ul.nav.nav-tabs li a {
    display: block;
    width: 100%;
    height: 100%;
    padding: 5px;
    color: black;
}

ul.nav.nav-tabs li a span.tab-acquirer-image {
    display: block;
    height: 95px;
    padding-top: 20px;
    line-height: 70px;
}

ul.nav.nav-tabs li a span.tab-acquirer-image img {
    display: inline-block;
    width: 100% !important;
    height: auto !important;
    max-width: 70px !important;
    max-height: 70px !important;
}

div.tab-content {
    height: auto !important;
}

@media only screen and (max-width: 767px) {
    .container #payment_method ul {
        font-size: 0;
        text-align: left;
    }
    .container #payment_method .nav > li {
        font-size: 14px;
        display: inline-block !important;
    }
}

@media only screen and (max-width: 574px) {
    ul.nav.nav-tabs li {
        width: 150px;
        height: 127px;
        line-height: 127px;
    }

    ul.nav.nav-tabs li a span.tab-acquirer-image {
        padding-top: 15px;
        height: 70px;
        line-height: 50px;
    }

    ul.nav.nav-tabs li a span.tab-acquirer-image img {
        max-width: 50px !important;
        max-height: 50px !important;
    }

    #payment_method .tab-acquirer-name {
        word-break: break-word;
    }
}

/* Checkbox fields */

#wsd_checkout_form div.f-type-boolean label {
    display: block;
    border: 1px solid #DEDEDE;
    padding: 16px 20px;
}

#wsd_checkout_form div.f-type-boolean input[type=radio],
#wsd_checkout_form div.f-type-boolean input[type=checkbox] {
    transform: scale(1.5);
    margin-right: 8px;
    accent-color: #E36F1E;
}

#wsd_checkout_form div.f-type-boolean input[type=radio]:not(:checked),
#wsd_checkout_form div.f-type-boolean input[type=checkbox]:not(:checked) {
    opacity: 0.4;
}

/* Text input fields */

#wsd_checkout_form div input[type=text]::-webkit-input-placeholder { /* Edge */
  /* color: transparent !important; */
  text-align: right;
}
#wsd_checkout_form div input[type=text]:-ms-input-placeholder { /* Internet Explorer 10-11 */
  /* color: transparent !important; */
  text-align: right;
}

#wsd_checkout_form div input[type=text]::placeholder {
  /* color: transparent !important; */
  text-align: right;
}

label.un-focused,
label.is-focused {
    position: absolute;
    font-size: 12px;
    top: -6px;
    /* background-color: #ffa; */
    margin-top: 0px !important;
    margin-bottom: 0px !important;
}
/* ... */

